overflow fix

--- a/src/css/Default.css
+++ b/src/css/Default.css
@@ -1,3 +1,10 @@
+body, html {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+
 .App {
   text-align: center;
   font-family: Arial, sans-serif;
